added "Cantonese" section with /yue-hanzi/ (and associated jyutping & Cantonese Yale info) and /defn|lang=yue|sort=人08/ templates <倳#19570768>

--- a/en/倳/倳.11066.wikitext
+++ b/en/倳/倳.11066.wikitext
@@ -11,6 +11,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[si6]], [[zi3]]|y=si6, ji3}}
+
+# {{defn|lang=yue|sort=人08}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
