--- a/en/倳/倳.11066.wikitext
+++ b/en/倳/倳.11066.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=2520<sub>7</sub>|canj=人十中弓 (OJLN)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=2520<sub>7</sub>|canj=人十中弓 (OJLN)|ids=⿰[[亻]][[事]]}}
 
 # [[stick]] in, [[stab]]
 # to [[erect]]
