--- a/en/倴/倴.11069.wikitext
+++ b/en/倴/倴.11069.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人大十廿 (OKJT)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人大十廿 (OKJT)|ids=⿰[[亻]][[奔]]}}
 
 # {{defn|Han|sort=人08}}
 
