--- a/en/倵/倵.11071.wikitext
+++ b/en/倵/倵.11071.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=2324<sub>0</sub>|canj=人一心一 (OMPM)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=2324<sub>0</sub>|canj=人一心一 (OMPM)|ids=⿰[[亻]][[武]]}}
 
 # {{defn|Han|sort=人08}}
 
