--- a/en/倶/倶.11073.wikitext
+++ b/en/倶/倶.11073.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人月山金 (OBUC)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人月山金 (OBUC)|ids=⿰[[亻]][[具]]}}
 
 # [[all]]
 
