--- a/en/倷/倷.11075.wikitext
+++ b/en/倷/倷.11075.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=2429<sub>1</sub>|canj=人大一火 (OKMF)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=2429<sub>1</sub>|canj=人大一火 (OKMF)|ids=⿰[[亻]][[奈]]}}
 
 # {{defn|Han|sort=人08}}
 
