--- a/en/倸/倸.11077.wikitext
+++ b/en/倸/倸.11077.wikitext
@@ -25,6 +25,9 @@
 
 # {{defn|lang=vi}}
 
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=5038 Nom Foundation]
+
 [[Category:Vietnamese Hán tự]]
 
 [[fr:倸]]
