--- a/en/倸/倸.11077.wikitext
+++ b/en/倸/倸.11077.wikitext
@@ -1,8 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人月木 (OBD)}}
-#an alternate term for [[睬]]
+{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人月木 (OBD)|ids=⿰[[亻]][[采]]}}
+
+# an alternate term for [[睬]]
 
 ====References====
 * {{Han ref|kx=0109.171|dkj=00822|dj=0233.030|hdz=10181.030|uh=5038|ud=20536}}
