--- a/en/倹/倹.11078.wikitext
+++ b/en/倹/倹.11078.wikitext
@@ -4,7 +4,7 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人人一人 (OOMO), X人人一人 (XOOMO)|ids=⿰[[亻]][[㑒]]}}
 
-# temperate, frugal, economical
+# [[temperate]], [[frugal]], [[economical]]
 
 ====References====
 * {{Han ref|kx=0109.171|dkj=00823|dj=0233.040|hdz=10181.011|uh=5039|ud=20537}}
