/* Translingual */ added "ids=" ⿰亻责 (composition) data to /Han char/ template <债#19571510>

--- a/en/债/债.11079.wikitext
+++ b/en/债/债.11079.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人手一人 (OQMO)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人手一人 (OQMO)|ids=⿰[[亻]][[责]]}}
 
 # [[debt]], [[loan]], [[liabilities]]
 
