--- a/en/债/债.11079.wikitext
+++ b/en/债/债.11079.wikitext
@@ -14,7 +14,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=jaai3|tra=債}}
+{{yue-hanzi|jyut=[[zaai3]]|y=jaai3|tra=債}}
 
 # {{defn|lang=yue|sort=人08}}
 
