--- a/en/倸/倸.11077.wikitext
+++ b/en/倸/倸.11077.wikitext
@@ -22,9 +22,9 @@
 ==Vietnamese==
 
 ===Han character===
-'''倸''' ([[thái]])
+{{vi-hantu|[[thái]]|rs=人08}}
 
-# {{defn|lang=vi}}
+# {{defn|lang=vi|sort=人08}}
 
 ====References====
 *[http://nomfoundation.org/common/nom_details.php?codepoint=5038 Nom Foundation]
