--- a/en/倽/倽.11083.wikitext
+++ b/en/倽/倽.11083.wikitext
@@ -16,7 +16,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[jià]] ([[jia4]]), [[shà]] ([[sha4]]), [[xiá]] ([[xia2]])|wg=chia<sup>4</sup>, sha<sup>4</sup>, hsia<sup>2</sup>}}
+{{cmn-hanzi|pin=[[shà]] ([[sha4]])|wg=sha<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=人08}}
 
