--- a/en/倽/倽.11083.wikitext
+++ b/en/倽/倽.11083.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人人一口 (OOMR), X人人一口 (XOOMR)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人人一口 (OOMR), X人人一口 (XOOMR)|ids=⿰[[亻]][[舍]]}}
 
 # [[what]]
 # [[which]]
