--- a/en/倾/倾.11084.wikitext
+++ b/en/倾/倾.11084.wikitext
@@ -5,9 +5,9 @@
 {{Han simp|傾|f=頁|t=页}}
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人心一人 (OPMO)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人心一人 (OPMO)|ids=⿰[[亻]][[顷]]}}
 
-# upset, pour out, overflow
+# [[upset]], [[pour]] out, [[overflow]]
 
 ====References====
 * {{Han ref|kx=0109.171|hdz=10182.010|uh=503E|ud=20542}}
