--- a/en/倿/倿.11085.wikitext
+++ b/en/倿/倿.11085.wikitext
@@ -8,6 +8,15 @@
 ====References====
 * {{Han ref|kx=0109.171|hdz=10183.041|uh=503F|ud=20543}}
 
+----
+
+==Mandarin==
+
+===Hanzi===
+{{cmn-hanzi|pin=[[qie]]|wg=ch'ieh}}
+
+# {{defn|lang=cmn|sort=人08}}
+
 [[fr:倿]]
 [[ko:倿]]
 [[pl:倿]]
