--- a/en/倿/倿.11085.wikitext
+++ b/en/倿/倿.11085.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人卜廿女 (OYTV)}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人卜廿女 (OYTV)|ids=⿰[[亻]][[妾]]}}
 
 # {{defn|Han|sort=人08}}
 
