--- a/en/偀/偀.11086.wikitext
+++ b/en/偀/偀.11086.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2423<sub>5</sub>|canj=人廿中大 (OTLK)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2423<sub>5</sub>|canj=人廿中大 (OTLK)|ids=⿰[[亻]][[英]]}}
 
 # {{defn|Han|sort=人09}}
 
