/* Translingual */ added "ids=" ⿰亻前 (composition) data to /Han char/ template <偂#19574836>

--- a/en/偂/偂.11088.wikitext
+++ b/en/偂/偂.11088.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人廿月弓 (OTBN)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人廿月弓 (OTBN)|ids=⿰[[亻]][[前]]}}
 
 # {{defn|Han|sort=人09}}
 
