added "Vietnamese" section with /vi-hantu/ and /defn|lang=vi|sort=人09/ templates <偅#19574894>

--- a/en/偅/偅.11092.wikitext
+++ b/en/偅/偅.11092.wikitext
@@ -47,6 +47,15 @@
 
 # {{defn|lang=cmn|sort=人09}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[chổng]]}}
+
+# {{defn|lang=vi|sort=人09}}
+
 [[fr:偅]]
 [[li:偅]]
 [[pl:偅]]
