--- a/en/偈/偈.11096.wikitext
+++ b/en/偈/偈.11096.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2622<sub>7</sub>|canj=人日心女 (OAPV)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2622<sub>7</sub>|canj=人日心女 (OAPV)|ids=⿰[[亻]][[曷]]}}
 
 # [[brave]]
 # [[martial]]
