--- a/en/偉/偉.11097.wikitext
+++ b/en/偉/偉.11097.wikitext
@@ -6,7 +6,7 @@
 {{Han compound|人|alt1=亻|韋}}<!-- Unclear to me if liushu is psc or ic (people dancing) -->
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=12|four=2425<sub>6</sub>|canj=人木一手 (ODMQ)}}
+{{Han char|rn=9|rad=人|as=09|sn=12|four=2425<sub>6</sub>|canj=人木一手 (ODMQ)|ids=⿰[[亻]][[韋]]}}
 
 # [[great]], [[robust]]
 # [[extraordinary]]
