--- a/en/偊/偊.11098.wikitext
+++ b/en/偊/偊.11098.wikitext
@@ -1,10 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2222<sub>7</sub>|canj=人竹中月 (OHLB)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2222<sub>7</sub>|canj=人竹中月 (OHLB)|ids=⿰[[亻]][[禹]]}}
 
-# to walk alone
-# self-reliant
+# to [[walk]] [[alone]]
+# [[self-reliant]]
 
 ====References====
 * {{Han ref|kx=0110.060|dkj=00838|dj=0235.010|hdz=10192.090|uh=504A|ud=20554|bh=D459|bd=54361}}
