/* Translingual */ added "ids=" ⿰亻是 (composition) data to /Han char/ template <偍#19575143>

--- a/en/偍/偍.11101.wikitext
+++ b/en/偍/偍.11101.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2628<sub>1</sub>|canj=人日一人 (OAMO)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2628<sub>1</sub>|canj=人日一人 (OAMO)|ids=⿰[[亻]][[是]]}}
 
 # {{defn|Han|sort=人09}}
 
