--- a/en/偔/偔.11108.wikitext
+++ b/en/偔/偔.11108.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人口口尸 (ORRS)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人口口尸 (ORRS)|ids=⿰[[亻]][[咢]]}}
 
 # {{defn|Han|sort=人09}}
 
