--- a/en/偖/偖.11110.wikitext
+++ b/en/偖/偖.11110.wikitext
@@ -36,7 +36,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[chě]] ([[che3]]), [[zè]] ([[ze4]])|wg=ch'e<sup>3</sup>, tse<sup>4</sup>}}
+{{cmn-hanzi|pin=[[chě]] ([[che3]])|wg=ch'e<sup>3</sup>}}
 
 # {{defn|lang=cmn|sort=人09}}
 
