--- a/en/偗/偗.11111.wikitext
+++ b/en/偗/偗.11111.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2926<sub>2</sub>|canj=人火竹山 (OFHU)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2926<sub>2</sub>|canj=人火竹山 (OFHU)|ids=⿰[[亻]][[省]]}}
 
 # {{defn|Han|sort=人09}}
 
