--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -4,8 +4,8 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2022<sub>1</sub>|canj=人卜口弓 (OYRN)|ids=⿰[[亻]][[亭]]}}
 
-# stop, suspend, delay
-# suitable
+# [[stop]], [[suspend]], [[delay]]
+# [[suitable]]
 
 ====References====
 * {{Han ref|kx=0110.320|dkj=00864|dj=0236.160|hdz=10194.070|uh=505C|ud=20572|bh=B0B1|bd=45233}}
