--- a/en/偝/偝.11117.wikitext
+++ b/en/偝/偝.11117.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2122<sub>7</sub>|canj=人中心月 (OLPB)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2122<sub>7</sub>|canj=人中心月 (OLPB)|ids=⿰[[亻]][[背]]}}
 
 # [[behind]], not [[facing]]
 # [[desert]]
