--- a/en/偞/偞.11118.wikitext
+++ b/en/偞/偞.11118.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2429<sub>4</sub>|canj=人心廿木 (OPTD)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2429<sub>4</sub>|canj=人心廿木 (OPTD)|ids=⿰[[亻]][[枼]]}}
 
 # {{defn|Han|sort=人09}}
 
