--- a/en/偠/偠.11120.wikitext
+++ b/en/偠/偠.11120.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2124<sub>4</sub>|canj=人一田女 (OMWV)|ids=⿰[[⺅]][[要]]}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2124<sub>4</sub>|canj=人一田女 (OMWV)|ids=⿰[[亻]][[要]]}}
 
 # {{defn|Han|sort=人09}}
 
