--- a/en/偢/偢.11122.wikitext
+++ b/en/偢/偢.11122.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2928<sub>0</sub>|canj=人竹木火 (OHDF)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2928<sub>0</sub>|canj=人竹木火 (OHDF)|ids=⿰[[亻]][[秋]]}}
 
-# to stare at
+# to [[stare]] at
 
 ====References====
 * {{Han ref|kx=0111.070|dkj=00871|dj=0237.060|hdz=10192.020|uh=5062|ud=20578|bh=D45A|bd=54362}}
