--- a/en/偣/偣.11123.wikitext
+++ b/en/偣/偣.11123.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2026<sub>1</sub>|canj=人卜廿日 (OYTA)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2026<sub>1</sub>|canj=人卜廿日 (OYTA)|ids=⿰[[亻]][[音]]}}
 
 # {{defn|Han|sort=人09}}
 
