--- a/en/偤/偤.11124.wikitext
+++ b/en/偤/偤.11124.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2826<sub>1</sub>|canj=人廿金田 (OTCW)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2826<sub>1</sub>|canj=人廿金田 (OTCW)|ids=⿰[[亻]][[酋]]}}
 
 # {{defn|Han|sort=人09}}
 
