--- a/en/偨/偨.11128.wikitext
+++ b/en/偨/偨.11128.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[ci1]], [[zi1]]|y=chi1, ji1}}
+
+# {{defn|lang=yue|sort=人09}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
