--- a/en/偪/偪.11130.wikitext
+++ b/en/偪/偪.11130.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2126<sub>6</sub>|canj=人一口田 (OMRW)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2126<sub>6</sub>|canj=人一口田 (OMRW)|ids=⿰[[亻]][[畐]]}}
 
 # [[compel]], [[pressure]], [[force]]
 # [[bother]]
