/* Translingual */ wikilinked "urgent" text in definition entry; added "ids=" ⿰亻怱 (composition) data to /Han char/ template <偬#19577935>

--- a/en/偬/偬.11132.wikitext
+++ b/en/偬/偬.11132.wikitext
@@ -2,9 +2,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人心大心 (OPKP)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人心大心 (OPKP)|ids=⿰[[亻]][[怱]]}}
 
-# urgent
+# [[urgent]]
 
 ====References====
 * {{Han ref|kx=0111.250|dkj=00889|dj=0237.220|hdz=10194.030|uh=506C|ud=20588}}
