--- a/en/偬/偬.11132.wikitext
+++ b/en/偬/偬.11132.wikitext
@@ -11,6 +11,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[zung2]]|y=jung2}}
+
+# {{defn|lang=yue|sort=人09}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
