--- a/en/偮/偮.11134.wikitext
+++ b/en/偮/偮.11134.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2624<sub>1</sub>|canj=人口尸十 (ORSJ)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2624<sub>1</sub>|canj=人口尸十 (ORSJ)|ids=⿰[[亻]][[咠]]}}
 
 # {{defn|Han|sort=人09}}
 
