/* Translingual */ wikilinked "sob" text in definition entry; added "ids=" ⿰亻哀 (composition) data to /Han char/ template <偯#19578094>

--- a/en/偯/偯.11135.wikitext
+++ b/en/偯/偯.11135.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2023<sub>2</sub>|canj=人卜口女 (OYRV), X人卜口女 (XOYRV)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2023<sub>2</sub>|canj=人卜口女 (OYRV), X人卜口女 (XOYRV)|ids=⿰[[亻]][[哀]]}}
 
-# sob
+# [[sob]]
 
 ====References====
 * {{Han ref|kx=0111.280|dkj=00892|hdz=10194.060|uh=506F|ud=20591|bh=B0C0|bd=45248}}
