--- a/en/偰/偰.11136.wikitext
+++ b/en/偰/偰.11136.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2723<sub>4</sub>|canj=人手竹大 (OQHK)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2723<sub>4</sub>|canj=人手竹大 (OQHK)|ids=⿰[[亻]][[契]]}}
 
 # {{defn|Han|sort=人09}}
 
