--- a/en/偱/偱.11137.wikitext
+++ b/en/偱/偱.11137.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人竹十山 (OHJU)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人竹十山 (OHJU)|ids=⿰[[亻]][[盾]]}}
 
 # {{defn|Han|sort=人09}}
 
