--- a/en/偳/偳.11139.wikitext
+++ b/en/偳/偳.11139.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[dyun1]]|y=dyun1}}
+
+# {{defn|lang=yue|sort=人09}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
