--- a/en/側/側.11140.wikitext
+++ b/en/側/側.11140.wikitext
@@ -15,7 +15,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=jak1|sim=侧}}
+{{yue-hanzi|jyut=[[zak1]]|y=jak1|sim=侧}}
 
 # {{defn|lang=yue|sort=人09}}
 
