--- a/en/偷/偷.11143.wikitext
+++ b/en/偷/偷.11143.wikitext
@@ -2,9 +2,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2822<sub>1</sub>|canj=人人一弓 (OOMN)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2822<sub>1</sub>|canj=人人一弓 (OOMN)|ids=⿰[[亻]][[俞]]}}
 
-# to steal, burglar, thief
+# to [[steal]]
+# [[burglar]], [[thief]]
 
 ====References====
 * {{Han ref|kx=0112.030|dj=0239.020|hdz=10193.020|uh=5077|ud=20599}}
