--- a/en/偸/偸.11144.wikitext
+++ b/en/偸/偸.11144.wikitext
@@ -2,9 +2,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人人一女 (OOMV)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人人一女 (OOMV)|ids=⿰[[亻]][[兪]]}}
 
-# to steal
+# to [[steal]]
 
 ====References====
 * {{Han ref|kx=0112.071|dkj=00901|hdz=10193.021|uh=5078|ud=20600}}
