--- a/en/偸/偸.11144.wikitext
+++ b/en/偸/偸.11144.wikitext
@@ -11,6 +11,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[tau1]]|y=tau1}}
+
+# {{defn|lang=yue|sort=人09}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
