--- a/en/昝/昝.16965.wikitext
+++ b/en/昝/昝.16965.wikitext
@@ -3,7 +3,7 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=2360<sub>4</sub>|canj=竹人日 (HOA), 竹卜日 (HYA)}}
 
-# a dual pronoun, I, you and me, we two
+# a [[dual]] [[pronoun]], [[I]], [[you]] and [[me]], [[we]] [[two]]
 
 ====References====
 * {{Han ref|kx=0492.190|dkj=13834|dj=0855.190|hdz=21503.030|uh=661D|ud=26141|bh=CEF5|bd=52981}}
