/* Translingual */ added "ids=" ⿱处日 (composition) data to /Han char/ template <昝#19579217>

--- a/en/昝/昝.16965.wikitext
+++ b/en/昝/昝.16965.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=2360<sub>4</sub>|canj=竹人日 (HOA), 竹卜日 (HYA)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=2360<sub>4</sub>|canj=竹人日 (HOA), 竹卜日 (HYA)|ids=⿱[[处]][[日]]}}
 
 # a [[dual]] [[pronoun]], [[I]], [[you]] and [[me]], [[we]] [[two]]
 
