/* Translingual */ added two definition entries and zdic.net reference link <偼#19579261>

--- a/en/偼/偼.11148.wikitext
+++ b/en/偼/偼.11148.wikitext
@@ -3,10 +3,12 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人卜尸人 (OYSO)}}
 
-# {{defn|Han|sort=人09}}
+# (variant of [[倢]]) [[beautiful]], [[handsome]]
+# [[woman]]
 
 ====References====
 * {{Han ref|kx=0112.071|dkj=00925|hdz=10189.011|uh=507C|ud=20604}}
+*[http://www.zdic.net/zd/zi/ZdicE5Zdic81ZdicBC.htm zdic.net (Han Dian)]
 
 ----
 
