--- a/en/偽/偽.11149.wikitext
+++ b/en/偽/偽.11149.wikitext
@@ -2,9 +2,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2222<sub>7</sub>|canj=人戈大火 (OIKF)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2222<sub>7</sub>|canj=人戈大火 (OIKF)|ids=⿰[[亻]][[為]]}}
 
-# false, counterfeit, bogus
+# [[false]], [[counterfeit]], [[bogus]]
 
 Variant: [[僞]]
 
