--- a/en/偾/偾.11150.wikitext
+++ b/en/偾/偾.11150.wikitext
@@ -2,9 +2,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人十廿人 (OJTO)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人十廿人 (OJTO)|ids=⿰[[亻]][[贲]]}}
 
-# ruin, cause fail
+# [[ruin]], [[cause]] [[fail]]
 # [[overthrown]]
 
 ====References====
