--- a/en/偿/偿.11151.wikitext
+++ b/en/偿/偿.11151.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人火月戈 (OFBI)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人火月戈 (OFBI)|ids=⿰[[亻]][[尝]]}}
 
 # [[repay]], [[recompense]]
 # [[restitution]]
