added "Cantonese" section with /yue-hanzi/ (and associated jyutping & Cantonese Yale info) and /defn|lang=yue|sort=人10/ templates <傂#19584361>

--- a/en/傂/傂.11154.wikitext
+++ b/en/傂/傂.11154.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[zi6]]|y=ji6}}
+
+# {{defn|lang=yue|sort=人10}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
