--- a/en/傂/傂.11154.wikitext
+++ b/en/傂/傂.11154.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=10|sn=12|four=2121<sub>1</sub>|canj=人竹卜山 (OHYU)}}
+{{Han char|rn=9|rad=人|as=10|sn=12|four=2121<sub>1</sub>|canj=人竹卜山 (OHYU)|ids=⿰[[亻]][[虒]]}}
 
 # {{defn|Han|sort=人10}}
 
