--- a/en/傈/傈.11160.wikitext
+++ b/en/傈/傈.11160.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人一田木 (OMWD)}}
+{{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人一田木 (OMWD)|ids=⿰[[亻]][[栗]]}}
 
 # [[tribe]]
 
