--- a/en/傉/傉.11161.wikitext
+++ b/en/傉/傉.11161.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人一女戈 (OMVI)}}
+{{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人一女戈 (OMVI)|ids=⿰[[亻]][[辱]]}}
 
 # {{defn|Han|sort=人10}}
 
