--- a/en/傋/傋.11163.wikitext
+++ b/en/傋/傋.11163.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=10|sn=12|four=2524<sub>7</sub>|canj=人廿廿月 (OTTB)}}
+{{Han char|rn=9|rad=人|as=10|sn=12|four=2524<sub>7</sub>|canj=人廿廿月 (OTTB)|ids=⿰[[亻]][[冓]]}}
 
 # {{defn|Han|sort=人10}}
 
