--- a/en/傍/傍.11165.wikitext
+++ b/en/傍/傍.11165.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=10|sn=12|four=2022<sub>7</sub>|canj=人卜月尸 (OYBS)}}
+{{Han char|rn=9|rad=人|as=10|sn=12|four=2022<sub>7</sub>|canj=人卜月尸 (OYBS)|ids=⿰[[亻]][[旁]]}}
 
 # by [[side]] of, [[beside]], [[near]], [[close]]
 
