--- a/en/傒/傒.11172.wikitext
+++ b/en/傒/傒.11172.wikitext
@@ -1,10 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=10|sn=12|four=2223<sub>4</sub>|canj=人月女大 (OBVK)}}
+{{Han char|rn=9|rad=人|as=10|sn=12|four=2223<sub>4</sub>|canj=人月女大 (OBVK)|ids=⿰[[亻]][[奚]]}}
 
-# personal name
-# servant
+# personal [[name]]
+# [[servant]]
 
 ====References====
 * {{Han ref|kx=0113.130|dkj=00959|dj=0241.040|hdz=10203.210|uh=5092|ud=20626|bh=D85D|bd=55389}}
