--- a/en/傓/傓.11173.wikitext
+++ b/en/傓/傓.11173.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人竹尸一 (OHSM), 人戈尸一 (OISM)}}
+{{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人竹尸一 (OHSM), 人戈尸一 (OISM)|ids=⿰[[亻]][[扇]]}}
 
 # {{defn|Han|sort=人10}}
 
