--- a/en/傕/傕.11175.wikitext
+++ b/en/傕/傕.11175.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=10|sn=12|four=2421<sub>4</sub>|canj=人人月土 (OOBG)}}
+{{Han char|rn=9|rad=人|as=10|sn=12|four=2421<sub>4</sub>|canj=人人月土 (OOBG)|ids=⿰[[亻]][[隺]]}}
 
-# {{defn|Han|sort=人10}}
+# used in [[old]] [[name]]s
 
 ====References====
 * {{Han ref|kx=0113.170|dkj=00963|dj=0241.070|hdz=10206.090|uh=5095|ud=20629|bh=D852|bd=55378}}
