--- a/en/傖/傖.11177.wikitext
+++ b/en/傖/傖.11177.wikitext
@@ -2,11 +2,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=10|sn=12|four=2826<sub>7</sub>|canj=人人戈口 (OOIR)}}
+{{Han char|rn=9|rad=人|as=10|sn=12|four=2826<sub>7</sub>|canj=人人戈口 (OOIR)|ids=⿰[[亻]][[倉]]}}
 
-# [[vulgar]] person, [[country]] man
-
-<!-- what about [[bumpkin]] or [[hick]]? -->
+# [[vulgar]] [[person]], [[country]] [[man]] <!-- what about [[bumpkin]] or [[hick]]? -->
 
 ====References====
 * {{Han ref|kx=0113.180|dkj=00964|dj=0241.080|hdz=10204.020|uh=5096|ud=20630|bh=B3C9|bd=46025}}
