--- a/en/傗/傗.11178.wikitext
+++ b/en/傗/傗.11178.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人卜女田 (OYVW)}}
+{{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人卜女田 (OYVW)|ids=⿰[[亻]][[畜]]}}
 
 # {{defn|Han|sort=人10}}
 
