--- a/en/傗/傗.11178.wikitext
+++ b/en/傗/傗.11178.wikitext
@@ -13,7 +13,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[chù]] ([[chu4]]), [[róng]] ([[rong2]])|wg=ch'u<sup>4</sup>, jung<sup>2</sup>}}
+{{cmn-hanzi|pin=[[chù]] ([[chu4]])|wg=ch'u<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=人10}}
 
