added "Cantonese" section with /yue-hanzi/ (and associated jyutping & Cantonese Yale info) and /defn|lang=yue|sort=人10/ templates <傛#19592201>

--- a/en/傛/傛.11182.wikitext
+++ b/en/傛/傛.11182.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[jung4]], [[jung6]]|y=yung4, yung6}}
+
+# {{defn|lang=yue|sort=人10}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
