--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -94,6 +94,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Slovene: {{t+|sl|veja|f}}
 * Spanish: {{t+|es|rama|f}}
 * Swahili: {{t+|sw|tanzu}}
+* Swedish: {{t|sv|gren|c}}
 * Tagalog: {{t-|tl|sanga}}
 * Tamil: {{t+|ta|கிளை|tr=kiḷai|sc=Taml}}
 * Telugu: {{t+|te|కొమ్మ|sc=Telu}}, {{t+|te|శాఖ|sc=Telu}}
