--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -45,6 +45,7 @@ i.e. differs from [[viz.]] in that what follows merely restates what was said in
 * Japanese: {{t-|ja|すなわち|tr=sunawachi|sc=Jpan}}
 * Lojban: {{t-|jbo|va'i}}
 * Malay: {{t|ms|iaitu}}
+* Malay: {{t|ms|yakni}}
 * Malayalam: [[അതായത്]] (athaayathu)
 * Norwegian:
 *: Bokmål: {{t+|nb|dvs.}}
