t+pt:[[transpor]] t-balance t+pt:[[superar]] ([[WT:EDIT|Assisted]]) <bridge#19615753>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -328,6 +328,7 @@ From {{etyl|enm}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}} {{term|brycgia
 =====Translations=====
 {{trans-top|to make a bridge}}
 * Finnish: [[rakentaa#Finnish|rakentaa]] [[silta#Finnish|silta]] [[jonkin#Finnish|jonkin]] {{t+|fi|yli}}
+* Portuguese: {{t|pt|transpor}}
 {{trans-mid}}
 * Quechua: {{t-|qu|chakachay}}
 {{trans-bottom}}
@@ -337,6 +338,7 @@ From {{etyl|enm}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}} {{term|brycgia
 * Hungarian: {{t+|hu|áthidal}}
 * Macedonian: {{t-|mk|премостува|tr=premóstuva|sc=Cyrl}}
 {{trans-mid}}
+* Portuguese: {{t|pt|superar}}
 * Swedish: {{t+|sv|överbrygga}}
 * Tongan: {{t-|to|hala fakakavakava}}
 {{trans-bottom}}
