--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -226,7 +226,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno}} {{term|conter|lan
 From {{etyl|fro}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}.
 
 ====Noun====
-{{en-noun}} {{m}}
+{{en-noun}}
 
 # The male ruler of a [[county]]; also known as an [[earl]], especially in England. The female equivalent is [[countess]].
 
