t+my:[[ဆွဲ]] ([[WT:EDIT|Assisted]]) <pull#19637062>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -106,6 +106,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Azeri: {{t-|az|çəkmək}}
 * Belarusian: {{t-|be|цягнуць|tr=cjahnúcʹ|sc=Cyrl}} {{impf}}, {{t-|be|пацягнуць|tr=pacjahnúcʹ|sc=Cyrl}} {{pf.}}
 * Bulgarian: {{t+|bg|дърпам|tr=dǎrpam|sc=Cyrl}}, {{t+|bg|влека|tr=vleka|sc=Cyrl}}, {{t+|bg|влача|tr=vlača|sc=Cyrl}}
+* Burmese: {{t|my|ဆွဲ|tr=hswè:|sc=Mymr}}
 * Catalan: {{t+|ca|tirar}}
 * Chinese:
 *: Mandarin: {{t|cmn|拖拉|tr=tuōlā|sc=Hani}}, {{t+|cmn|拉|tr=lā|sc=Hani}}
