--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -69,6 +69,7 @@
 * Belarusian: {{t-|be|штурхаць|tr=štúrxacʹ|sc=Cyrl}} {{impf}}
 * Bengali: {{t-|bn|ধাক্কা দেওয়া|tr=dhakka deoa|sc=Beng}}, {{t-|bn|ধাক্কানো|tr=dhakkano|sc=Beng}}
 * Bulgarian: {{t+|bg|бутам|tr=butam|sc=Cyrl}}, {{t+|bg|блъскам|tr=blǎskam|sc=Cyrl}}
+* Burmese: {{t|my|တွန်း|tr=tun:|sc=Mymr}}
 * Catalan: {{t+|ca|empènyer}}
 * Chinese:
 *: Mandarin: {{t+|cmn|推|tr=tuī|sc=Hani}}
