--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -335,8 +335,9 @@
 * French: {{t+|fr|quinte|f}}
 * German: {{t+|de|Straße|f}}
 * Greek: {{t-|el|κέντα|f|sc=Grek}}
-{{trans-mid}}
 * Hungarian: {{t+|hu|sor}}
+{{trans-mid}}
+* Icelandic: {{t|is|röð|f}}
 * Irish: {{t-|ga|sraith|f}}
 * Japanese: {{t-|ja|ストレート|tr=sutorēto}}
 * Polish: {{t+|pl|strit|m}}
