/* See also */ <Yugoslavia#19670020>

--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -70,6 +70,7 @@ From {{etyl|sh|en}} [[Jugoslavija]], in turn from [[jug]]o (''south'') and '''sl
 * [[Appendix:Countries of the world]]
 
 [[Category:en:Countries]]
+[[Category:en:Yugoslavia]]
 
 ----
 
