t+de:[[Haken]] ([[WT:EDIT|Assisted]]) <catch#19673110>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -132,6 +132,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Dutch: {{t-|nl|struikelblok|n}}, {{t+|nl|valstrik|m}}
 * Finnish: {{t+|fi|koukku}}
 * French: {{t+|fr|hic|m}}
+* German: {{t|de|Haken|m}}
 * Hebrew: {{t-|he|עוקץ|m|tr='oqetz}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|bökkenő}}
