--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -138,6 +138,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Hungarian: {{t+|hu|bökkenő}}
 * Italian: {{t+|it|trappola}}
 * Russian: {{t+|ru|подвох|sc=Cyrl|tr=podvóx|alt=подво́х}}
+* Spanish: {{t|es|pega|f}}, {{t|es|traba|f}}
 * Swedish: {{t+|sv|hake|c}}
 {{trans-bottom}}
 
