--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -39,9 +39,10 @@ From {{etyl|sh|en}} [[Jugoslavija]], in turn from [[jug]]o (''south'') and '''sl
 * Hindi: {{t-|hi|यूगोस्लाविया|tr=yūgōslāviyā}}
 * Hungarian: {{t+|hu|Jugoszlávia}}
 * Italian: {{t-|it|Jugoslavia}}, {{t-|it|Iugoslavia|f}}
-{{trans-mid}}
 * Japanese: {{t-|ja|ユーゴスラビア|tr=Yūgosurabia}}, {{t-|ja|ユーゴスラヴィア|tr=Yūgosuravia}}
+{{trans-mid}}
 * Korean: {{t+|ko|유고슬라비아|tr=Yugoseullabia|sc=Hang}}
+* Latvian: {{t|lv|Dienvidslāvija|f}}
 * Macedonian: {{t+|mk|Југославија|f|tr=Jugoslávija}}
 * Malay: {{t-|ms|Yugoslavia}}
 * Maltese: il-[[Jugoslavja]]
