t+nap:[[vunnella]] ([[WT:EDIT|Assisted]]) <skirt#19681365>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -79,6 +79,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{recons
 * Macedonian: {{t-|mk|здолниште|n}}, {{t-|mk|здолница|f}}, {{t-|mk|сукња|f}} {{qualifier|colloquial}}
 * Maltese: {{t-|mt|dublett|m}}
 * Navajo: {{tø|nv|tłʼaakał}}
+* Neapolitan: {{tø|nap|vunnella|f}}
 * Norwegian: {{t-|no|skjørt|n}}
 * Old English: {{t-|ang|scyrte|f}}
 * Persian: {{t+|fa|دامن|tr=dâman|sc=fa-Arab}}, {{t-|fa|دامن دوخت|sc=fa-Arab}}
