--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -69,7 +69,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Spanish: {{t+|es|vomitar}}, {{t+|es|devolver}}, {{t+|es|arrojar}}
 * Swahili: {{t-|sw|kutapika}}
 * Swedish: {{t+|sv|kräkas}}, {{t+|sv|spy}}, {{t-|sv|kasta upp}}
-* Tamil: {{t|ta|குமட்டு|tr=kumaṭṭu|sc=Taml}}, {{t|ta|உவட்டு|tr=uvaṭṭu|sc=Taml}}, {{t|ta|உவாந்தி|tr=uvāndi|sc=Taml}}
+* Tamil: {{t|ta|குமட்டு|tr=kumaṭṭu|sc=Taml}}, {{t|ta|உவட்டு|tr=uvaṭṭu|sc=Taml}}, {{t|ta|உவாந்தி|tr=uvāndi|sc=Taml}}, {{t|ta|வாந்தி|tr=vāndi|sc=Taml}}
 * Turkish: {{t+|tr|kusmak}}
 * Ukrainian: {{t+|uk|блювати|tr=bljuváty|sc=Cyrl}}
 {{trans-bottom}}
