/* Cantonese */ added "jyut=" (jyutping) data (ji6, jik6) to /yue-hanzi/ template <易#19696122>

--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -21,7 +21,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=yi6, yik6}}
+{{yue-hanzi|jyut=[[ji6]], [[jik6]]|y=yi6, yik6}}
 
 # {{defn|lang=yue|sort=日04}}
 
