t+my:[[ကစား]] t-balance ([[WT:EDIT|Assisted]]) <play#19699439>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -252,6 +252,7 @@ From {{etyl|enm}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|ple
 {{trans-top|participate in (a sport or game)}}
 * Arabic: {{Arab|[[لَعِبَ]]}} (laʕiba)
 * Armenian: {{t-|hy|խաղալ|tr=xaġal}}
+* Burmese: {{t|my|ကစား|tr=găza:|sc=Mymr}}
 * Catalan: participar, jugar
 * Chinese: [[玩]] (wán)
 * Czech: {{t+|cs|hrát}}
