t+gl:[[porto]] ([[WT:EDIT|Assisted]]) <port#19700870>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -47,6 +47,7 @@
 * Estonian: {{t-|et|sadam}}
 * Finnish: {{t+|fi|satama}}
 * French: {{t+|fr|port|m}}
+* Galician: {{t|gl|porto|m}}
 * Georgian: {{t-|ka|პორტი|tr=porti|sc=Geor}}, {{t-|ka|ნავსადგური|tr=navsadguri|sc=Geor}}
 * German: {{t+|de|Hafen|m}}
 * Greek: {{t+|el|λιμάνι|n|tr=limáni}}, {{t+|el|λιμένας|m|tr=liménas}}
