--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -205,6 +205,7 @@ From {{etyl|la}} {{term|porta||passage, gate}}, reinforced in {{etyl|enm}}, from
 * Estonian: {{t+|et|port}}
 * Finnish: {{t+|fi|portti}}
 * French: {{t+|fr|port|m}}
+* Galician: {{t|gl|porto|m}}
 * German: {{t-|de|Port|m}}
 {{trans-mid}}
 * Greek: {{t+|el|θύρα|f|tr=θíra}}
