t+gl:[[porto]] ([[WT:EDIT|Assisted]]) <port#19700957>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -296,6 +296,7 @@ Named from {{etyl|pt}} [[Oporto]], a city in [[Portugal]] from whence the wines 
 * Estonian: {{t-|et|portvein}}
 * Finnish: {{t-|fi|portviini}}
 * French: [[vin de Porto]] {{m}}
+* Galician: {{t|gl|porto|m}}
 * German: {{t+|de|Portwein|m}}
 * Greek: {{t-|el|πορτό|n|tr=portó}}, {{qualifier|rare}} {{t-|el|οίνος Πορτογαλίας|m|tr=oínos Portogalías}}
 {{trans-mid}}
