t+pt:[[ramo]] ([[WT:EDIT|Assisted]]) <branch#19707670>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -178,7 +178,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Italian: {{t+|it|branca|f}}
 * Polish: {{t+|pl|gałąź|f}}, {{t+|pl|dział|m}}
 {{trans-mid}}
-* Portuguese: {{t+|pt|divisão}}
+* Portuguese: {{t+|pt|divisão}}, {{t|pt|ramo|m}} {{qualifier|in science, in arts}}
 * Romanian: {{t+|ro|ram|n}}, {{t+|ro|ramură|f}}, {{t-|ro|branșă|f}}
 * Russian: {{t+|ru|отрасль|f|tr=ótraslʹ|sc=Cyrl}}, {{t+|ru|область|f|tr=óblastʹ|sc=Cyrl}}
 * Scots: {{tø|sco|brainch}}
