--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -5,7 +5,7 @@
 {{etyl|enm|en}} {{term|tortuse|lang=enm}}, {{term|tortuce|lang=enm}}, {{term|tortuge|lang=enm}}, from {{etyl|ML.|en}} {{term|tortuca|lang=la}}, possibly from {{etyl|LL.}} {{term|tartarucha|tartarūcha|lang=la}}, from {{etyl|LL.}} {{term|tartaruchus|tartarūchus|of Tartarus|lang=la}}, from {{etyl|grc|en}} {{term|ταρταροῦχος|tr=tartarouchos||lang=grc|from Tartaros, Tartarus, the land of the dead in ancient stories}}, because it used to be thought that tortoises and turtles came from the underworld; or from {{etyl|la|en}} {{term|tortus||lang=la|twisted}}.
 
 ===Pronunciation===
-* {{IPA|/ˈtɔːtəs/}}
+* {{IPA|/ˈtɔː(r)təs/}}
 * {{audio|en-us-tortoise.ogg|Audio (US)}}
 *: {{rhymes|ɔː(r)təs}}
 
