--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -48,17 +48,13 @@ Strong conjugation of {{term|heat}}
 From {{etyl|dum|nl}} {{term|dat|lang=dum}}, which was contracted to {{term|'t|lang=dum}} in usual speech. This form was later interpreted as being the same as the neuter pronoun {{term|het|lang=nl}} (etymology 2, see below), which was contracted in the same way. This then led to the modern spelling beginning with ''h'', which is in fact unetymological.
 
 ====Article====
-{{head|nl|article|g=n|g2=s}}
+{{head|nl|article|g=n}}
 
 # [[the]] {{qualifier|the [[neuter]] [[definite article]]}}
 #: '''''het''' boek''
 #:: '''the''' book
 #: '''''het''' meisje''
 #:: '''the''' girl
-
-=====Usage notes=====
-* Used in front of [[neuter]] nouns in the [[singular]], indicating a specific person or thing instead of the general case.
-* About grammatical gender in Dutch: all [[infinitive]]s and [[diminutive]]s are automatically neuter; therefore, ''[[meisje]]'', "girl", is neuter. However, sex takes precedence in all the pronouns. Compare ''het kopje en zijn schotel'' (the (little) cup and '''its''' saucer) with ''het meisje en haar hoed'' (the (little) girl and '''her''' hat). In many cases the possessive pronoun ''[[zijn]]'' or ''[[haar]]'' is avoided when referring to inanimate nouns; instead the [[pronominal adverb]] ''[[ervan]]'' is used: ''het kopje en de schotel ervan''.
 
 =====Derived terms=====
 * {{l|nl|aan het}}
