--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -333,7 +333,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Portuguese: {{t-|pt|amanteigar}}, {{t-|pt|passar manteiga em}}
 * Russian: {{t+|ru|намаслить|tr=namáslit’|sc=Cyrl}}, {{t-|ru|намасливать|tr=namáslivat’|sc=Cyrl}}, {{t-|ru|намазать маслом|tr=namázat’ máslom|sc=Cyrl}}, {{t-|ru|намазывать маслом|tr=namázyvat’ máslom|sc=Cyrl}}
 * Slovene: {{t-|sl|namazati z maslom}}
-* Spanish: {{t+|es|untar}} {{t+|es|mantequilla}}
+* Spanish: {{t-|es|untar con mantequilla}}
 * Swedish: {{t+|sv|bre}}, {{t+|sv|breda}}
 * Thai: {{t-|th|ทาเนย|tr=ta noey|sc=Thai}}
 * Vietnamese: {{qualifier|vào}} {{t-|vi|quẹt bơ}}
