--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -13,9 +13,11 @@
 
 ====Translations====
 {{trans-top|One of the great tendons situated in each side of the ham, or space back of the knee}}
+* Danish: {{t|da|hase}}
 * Finnish: {{t-|fi|kinnerjänne}}
 {{trans-mid}}
 * Russian: {{t-|ru|подколенное сухожилие|n|tr=podkolénnoje suxožílije|sc=Cyrl}}, {{qualifier|colloquial}} {{t+|ru|поджилки|f|p|tr=podžílki|sc=Cyrl}}
+* Swedish: {{t|sv|hassena|c}}
 {{trans-bottom}}
 
 {{trans-see|biceps femoris}}
