--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -77,6 +77,9 @@ From day 1 to day 10: thượng tuần 上旬 |
 From day 11 to day 20: trung tuần 中旬 |
 From day 21 to the end of the month: hạ tuần hạ tuần 下旬 |
 
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=65ec Nom Foundation]
+
 [[Category:Vietnamese Hán tự]]
 
 [[fr:旬]]
