/* Verb */ merged transitive and intransitive sense - they have same defs <push#19812413>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -13,7 +13,8 @@
 {{en-verb|push|es}}
 
 # {{transitive|intransitive}} To apply a [[force]] to (an object) such that it moves [[away]] from the person or thing applying the force.
-#: ''In his anger he pushed me against the wall and threatened me.''
+#: ''In his anger he '''pushed''' me against the wall and threatened me.''
+#: ''You need to '''push''' quite hard to get this door open.''
 # {{transitive}} To continually attempt to persuade (a person) into a particular course of action.
 # {{transitive}} To continually attempt to promote (a point of view).
 #: ''Stop '''pushing''' the issue &mdash; I'm not interested.''
@@ -23,8 +24,6 @@
 # {{context|informal|transitive}} To [[approach]]; to come close to.
 #: ''My old car is '''pushing''' 250,000 miles.''
 #: ''He's pushing sixty.'' (= ''he's nearly sixty years old'')
-# {{intransitive}} To apply a [[force]] to an object such that it moves [[away]] from the person applying the force.
-#: ''You need to '''push''' quite hard to get this door open.''
 # {{intransitive}} To tense the muscles in the [[abdomen]] in order to [[expel]] its contents.
 #: ''During childbirth, there are times when the [[obstetrician]] advises the woman not to '''push'''.''
 # {{intransitive}} To continue to attempt to persuade a person into a particular course of action.
