--- a/en/惝/惝.15602.wikitext
+++ b/en/惝/惝.15602.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=08|sn=11|four=9902<sub>7</sub>|canj=心火月口 (PFBR)}}
+{{Han char|rn=61|rad=心|as=08|sn=11|four=9902<sub>7</sub>|canj=心火月口 (PFBR)|ids=⿰[[忄]][[尚]]}}
 
 # {{defn|Han|sort=心08}}
 
