t+ga:[[cosain]] ([[WT:EDIT|Assisted]]) <cost#19904967>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -190,6 +190,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Indonesian: [[habis|menghabiskan]] biaya
 * Interlingua: {{t-|ia|costar}}
 {{trans-mid}}
+* Irish: {{t|ga|cosain}}
 * Italian: {{t+|it|costare}}
 * Japanese: {{t-|ja|費やす|tr=[[ついやす]], tsuiyasu}}, {{t-|ja|掛かる|tr=kakaru}}
 * Jèrriais: {{tø|roa-jer|couôter}}
