/* Japanese */ kanji cats <易#19920919>

--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -41,6 +41,9 @@
 ====Readings====
 * {{ja-readings|on=[[えき]] (eki), [[い]] (i)|kun=[[やさしい]] (yasashii), [[かえる]] (kaeru), [[おさめる]] (osameru)}}
 
+[[Category:Japanese terms written with one Han script character]]
+[[Category:Japanese terms spelled with 易]]
+
 ----
 
 ==Korean==
