--- a/en/垣/垣.13095.wikitext
+++ b/en/垣/垣.13095.wikitext
@@ -32,6 +32,9 @@
 
 # [[fence]]
 
+[[Category:Japanese terms written with one Han script character]]
+[[Category:Japanese terms spelled with 垣]]
+
 ----
 
 ==Mandarin==
