/* Japanese */ kanji cats <坂#19941092>

--- a/en/坂/坂.12997.wikitext
+++ b/en/坂/坂.12997.wikitext
@@ -32,6 +32,8 @@
 ====Alternative forms====
 * {{l|ja|阪}}
 
+[[Category:Japanese terms written with one Han script character]]
+[[Category:Japanese terms spelled with 坂]]
 ----
 
 ==Korean==
