/* Japanese */ kanji cats <垂#19941390>

--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -67,6 +67,8 @@
 * [[しみっ垂れ]] (''shimittare''): stinginess, miser
 {{bottom}}
 
+[[Category:Japanese terms written with one Han script character]]
+[[Category:Japanese terms spelled with 垂]]
 ----
 
 ==Korean==
