/* Japanese */ kanji cats <側#19941950>

--- a/en/側/側.11140.wikitext
+++ b/en/側/側.11140.wikitext
@@ -27,6 +27,7 @@
 {{ja-noun|k|hira=がわ|rom=gawa}}
 
 # [[side]]
+
 {{ja-noun|k|hira=そば|rom=soba}}
 # [[vicinity]], [[near]], [[beside]]
 
@@ -65,6 +66,8 @@
 * [[側む]]
 * [[側仕え]]
 
+[[Category:Japanese terms written with one Han script character]]
+[[Category:Japanese terms spelled with 側]]
 ----
 
 ==Korean==
