--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -10,7 +10,7 @@
 ===Etymology 1===
 From {{etyl|enm}} {{term|cost|lang=enm}}, from {{etyl|ang}} {{term|cost||option, choice, possibility, manner, way, condition|lang=ang}}, from {{etyl|non}} {{term|kostr||choice, opportunity, chance, condition, state, quality|lang=non}}, from {{etyl|gem-pro|en}} {{recons|kustuz||choice, trial|lang=gem-pro}} (or {{etyl|gem-pro|en}} {{recons|kustiz||choice, trial|lang=gem-pro}}), from {{etyl|ine-pro|en}} {{recons|ǵéwstus||to enjoy, taste|lang=ine-pro}}.
 
-Cognate with {{etyl|is|-}} {{term|kostur|lang=is}}, {{etyl|de|-}} dialectal {{term|Kust||taste, flavour|lang=de}}, {{etyl|nl|-}} {{term|kust||choice, choosing|lang=nl}}, {{etyl|frr|-}} {{term|kest||choice, estimation, virtue|lang=frr}}, {{etyl|ang|-}} {{term|cyst||free-will, choice, election, the best of anything, the choicest, picked host, moral excellence, virtue, goodness, generosity, munificence|lang=ang}}. Related to {{l|en|choose}}.
+Cognate with {{etyl|is|-}} {{term|kostur|lang=is}}, {{etyl|de|-}} dialectal {{term|Kust||taste, flavour|lang=de}}, {{etyl|nl|-}} {{term|kust||choice, choosing|lang=nl}}, {{etyl|frr|-}} {{term|kest||choice, estimation, virtue|lang=frr}}, {{etyl|fy|-}} {{term|kêst||article of law, statute|lang=fy}}, {{etyl|ang|-}} {{term|cyst||free-will, choice, election, the best of anything, the choicest, picked host, moral excellence, virtue, goodness, generosity, munificence|lang=ang}}. Related to {{l|en|choose}}.
 
 ====Noun====
 {{en-noun}}
