/* Japanese */ kanji cats <春#19964101>

--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -75,7 +75,8 @@ There are minor differences in where the list stroke of the top component (top-l
 [[Category:1000 Japanese basic words|はる]]
 [[Category:ja:Calendar terms|はる]]
 [[Category:ja:Seasons|はる]]
-
+[[Category:Japanese terms written with one Han script character]]
+[[Category:Japanese terms spelled with 春]]
 ----
 
 ==Korean==
