/* Japanese */ kanji cats <旧#19965186>

--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -74,6 +74,9 @@ In current form, {{Han compound|〡|t1=one|日|t2=day}}, representing the day be
 
 {{ja-pos|k|prefix|hira=ふる|rom=furu-}}
 # [[old]], [[used]], [[previous]]
+
+[[Category:Japanese terms written with one Han script character]]
+[[Category:Japanese terms spelled with 旧]]
 ----
 
 ==Korean==
