--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -92,6 +92,10 @@
 
 # {{defn|lang=cmn|sort=人10}}
 
+===Noun===
+{{cmn-noun|t|sim=伞|pin=sǎn|pint=san3|rs=人10}}
+
+# [[umbrella]]
 ----
 
 ==Vietnamese==
