--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -17,7 +17,7 @@ From {{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|
 
 # {{countable}} An [[outer]] [[garment]] [[cover]]ing the upper [[torso]] and [[arms]].
 # {{countable}} A [[covering]] of [[material]], such as [[paint]].
-# {{countable}} The [[fur]] or [[feathers]] of animal.
+# {{countable}} The [[skin]] of humans, animals, etc.
 # {{context|uncountable|nautical}} [[canvas]] [[painted]] with thick [[tar]] and secured round a [[mast]] or [[bowsprit]] to prevent [[water]] running down the sides into the [[hold]] (now made of [[rubber]] or [[leather]])
 
 ====Derived terms====
