--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -126,7 +126,12 @@
 # {{form of|oblique plural|lie|lang=fro}}
 
 ----
+==Serbo-Croatian==
 
+===Noun===
+{{sh-noun|g=m}}
+
+# {{obsolete spelling of|lijes|lang=sh}}
 ==Swedish==
 
 ===Noun===
