--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -244,7 +244,8 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Latin: {{t-|la|butyrum}}
 * Latvian: {{t+|lv|sviests|m}}
 * Lithuanian: {{t-|lt|sviestas|m}}
-* Low German: {{t|nds|Botter|f}}
+* Low German: 
+*: German Low German: {{t|nds-de|Botter|f}}
 * Luxembourgish: {{t+|lb|Botter|m}}
 * Macedonian: {{t-|mk|путер|m|tr=púter}}
 * Malay: {{t+|ms|mentega}}
