t+my:[[ဖြောင့်]] t+my:[[စင်း]] ([[WT:EDIT|Assisted]]) <straight#20001868>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -133,6 +133,7 @@
 * Arabic: {{t-|ar|مستفيم|sc=Arab}}
 * Armenian: {{t+|hy|ուղիղ|tr=uġiġ}}
 * Aromanian: {{t-|rup|ãndreptu}}
+* Burmese: {{t|my|ဖြောင့်|tr=hpyaung.|sc=Mymr}}, {{t|my|စင်း|tr=sin:|sc=Mymr}}
 * Chamicuro: {{tø|ccc|nanatolo}}
 * Chinese:
 *: Mandarin: {{t|cmn|直|tr=zhí|sc=Hani}}
