--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -97,13 +97,14 @@
 * Hindi: {{t-|hi|चूसना|tr=cūsnā}}
 * Hebrew: {{t-|he|למצוץ|tr=limtsots}}
 * Hungarian: {{t+|hu|szopik}}
+* Irish: {{t|ga|súigh}}
 * Italian: {{t+|it|succhiare}}, {{t-|it|suggere}}
 * Japanese: {{t-|ja|吸う|tr=すう, suu}}, {{t-|ja|しゃぶる|tr=shaburu}}
 * Korean: {{t+|ko|빨다|tr=ppalda}}
 * Kurdish: {{t+|ku|mêjîn}}, {{t+|ku|mêtin}}, {{ku-Arab|[[مژین]]}}
 * Latin: {{t+|la|sugo}}
-* Latvian: {{t+|lv|sūkt}}
 {{trans-mid}}
+* Latvian: {{t+|lv|sūkt}}
 * Lithuanian: {{t-|lt|čiulpti|alt=čiul̃pti}}
 * Macedonian: {{t-|mk|цица|tr=cíca}}
 * Malay: {{t-|ms|hisap}}, {{t-|ms|sedut}}
