--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -67,7 +67,7 @@
 * Greek: {{t+|el|ελιά|f|tr=eliá}}
 *: Ancient: {{tø|grc|ἐλαία|f|tr=elaiā|sc=polytonic}}
 * {{trreq|gu}}
-* Hausa: {{t-|ha|zaitun}}
+* Hausa: {{t-|ha|zaitun|m|alt=zàitûn}}
 * Hebrew: {{t+|he|זית|tr=zait}}
 * Hindi: {{t-|hi|ज़ैतून|tr=zaitūn}}
 * Hungarian: {{t+|hu|olajbogyó}}
