--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -91,7 +91,7 @@
 * Middle Persian: {{tø|pal|𐭦𐭩𐭲𐭩|tr=zayt|sc=Phli}}
 * Norwegian: {{t-|no|oliven}}
 * Occitan: {{t+|oc|oliva|f}}
-* Persian: {{t+|fa|زیتون}}
+* Persian: {{t+|fa|زیتون|tr=zeytun}}
 * Polish: {{t+|pl|oliwka}}
 * Portuguese: {{t+|pt|azeitona|f}}, {{t+|pt|oliva|f}}
 * Romanian: {{t+|ro|măslină|f}}, {{t+|ro|olivă|f}}
@@ -150,12 +150,12 @@
 * Persian: {{fa-Arab|[[رنگ]] [[زیتونی]]}} (rang zaitūni), {{t+|fa|زیتونی|tr=zeytōni}}
 * Polish: {{t+|pl|oliwkowy|f}}
 {{trans-mid}}
-* Portuguese: [[verde-oliva]] {{m}}
+* Portuguese: {{t|pt|verde-oliva|m}}
 * Russian: {{t+|ru|оливковый|tr=olívkovyj}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|маслинаста|f|sc=Cyrl}}
 *: Roman: {{t-|sh|maslinasta|f}}
-* Slovene: [[olivno zelena]] {{f}}
+* Slovene: {{t|sl|olivno zelena|f}}
 * Spanish: [[verde oliva]], {{t+|es|aceitunado|m}}
 * Swedish: {{t+|sv|oliv}}, {{t+|sv|olivgrönt}}
 * Turkish: {{t+|tr|zeytin}}
