/* Noun */ merge senses, same thing <catch#20026624>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -25,9 +25,8 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 # {{countable}} A [[find]], in particular a [[boyfriend]] or [[girlfriend]] or prospective [[spouse]]. {{jump|a find|s|t}}
 #: ''Did you see his latest '''catch'''?''
 #: ''He's a good '''catch'''.''
-# {{countable}} Something which is captured or caught. {{jump|something caught|t}}
+# {{countable}} Something which is captured or caught. {{jump|something caught|t}} {{jump|quantity captured|s}}
 #: ''The fishermen took pictures of their '''catch'''.''
-# {{uncountable}} The amount which is caught, especially of [[fish]]. {{jump|quantity captured|s}}
 #: ''The '''catch''' amounted to five tons of swordfish.''
 # {{countable}} A stopping [[mechanism]], especially a [[clasp]] which stops something from [[open]]ing. {{jump|stopping mechanism|s|t}}
 #: ''She installed a sturdy '''catch''' to keep her cabinets closed tight.''
