/* Translations */ Fixed spelling <fight#20031486>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -44,7 +44,7 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 {{trans-top|to contend in physical conflict}}
 * Afrikaans: {{t-|af|stryd}}
 * Albanian: {{t-|sq|luftën}}
-* Arabic: {{t+|ar|قاتل|tr=qātala}}, {{t-|ar|تقاتل|tr=taqātala}}, {{t-|ar|تحارب|tr=tajāraba|sc=Arab}}
+* Arabic: {{t+|ar|قاتل|tr=qātala}}, {{t-|ar|تقاتل|tr=taqātala}}, {{t-|ar|تحارب|tr=taHāraba|sc=Arab}}
 * Aramaic:
 *: [[Syriac]]: {{tø|syc|ܟܬܫ|tr=kθaš|sc=Syrc}}
 * Armenian: {{t-|hy|կռվել|tr=kṙvel}}
