--- a/en/坳/坳.13046.wikitext
+++ b/en/坳/坳.13046.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=4412<sub>7</sub>|canj=土女戈尸 (GVIS)}}
+{{Han char|rn=32|rad=土|as=05|sn=8|four=4412<sub>7</sub>|canj=土女戈尸 (GVIS)|ids=⿰[土]][[幼]]}}
 
-# a hollow in the ground, a cavity, depression
+# a [[hollow]] in the [[ground]], a [[cavity]], [[depression]]
 # [[undulating]], [[depressed]]
 
 ====References====
