--- a/en/场/场.12988.wikitext
+++ b/en/场/场.12988.wikitext
@@ -18,7 +18,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=cheung4|tra=場}}
+{{yue-hanzi|jyut=[[coeng4]]|y=cheung4|tra=場}}
 
 # {{defn|lang=yue|sort=土03}}
 
