--- a/en/场/场.12988.wikitext
+++ b/en/场/场.12988.wikitext
@@ -8,7 +8,7 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=土弓尸竹 (GNSH)}}
 
-# open space, field, market
+# [[open]] [[space]], [[field]], [[market]]
 
 ====References====
 * {{Han ref|kx=0224.181|hdz=10421.010|uh=573A|ud=22330}}
