--- a/en/坍/坍.13008.wikitext
+++ b/en/坍/坍.13008.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=4714<sub>0</sub>|canj=土月卜 (GBY)}}
+{{Han char|rn=32|rad=土|as=04|sn=7|four=4714<sub>0</sub>|canj=土月卜 (GBY)|ids=⿰[[土]][[丹]]}}
 
 # [[collapse]]
 # [[landslide]]
