--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -13,6 +13,7 @@
 
 ====Translations====
 {{trans-top|One of the great tendons situated in each side of the ham, or space back of the knee}}
+* Arabic: {{t|ar|وتر المأبض|m|tr=watar al-maʔbad|sc=Arab}}
 * Danish: {{t|da|hase}}
 * Finnish: {{t-|fi|kinnerjänne}}
 * Russian: {{t-|ru|подколенное сухожилие|n|tr=podkolénnoje suxožílije|sc=Cyrl}}, {{qualifier|colloquial}} {{t+|ru|поджилки|f|p|tr=podžílki|sc=Cyrl}}
