--- a/en/垐/垐.13076.wikitext
+++ b/en/垐/垐.13076.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=戈人土 (IOG)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=戈人土 (IOG)|ids=⿱[[次]][[土]]}}
 
 # {{defn|Han|sort=土06}}
 
