--- a/en/垐/垐.13076.wikitext
+++ b/en/垐/垐.13076.wikitext
@@ -3,7 +3,7 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=戈人土 (IOG)|ids=⿱[[次]][[土]]}}
 
-# (non-classical form of [[垐]]) to [[spread]] [[soil]] on the [[road]], [[pave]] the road with soil
+# to [[spread]] [[soil]] on the [[road]], [[pave]] the road with soil
 # (ancient form of [[堲]]) [[sickness]], [[illness]], [[disease]]
 # [[hate]], [[disgust]]
 
