--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -100,9 +100,10 @@ From {{etyl|enm}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{term|c
 * Greek: {{t+|el|κόστος|n|tr=kóstos}}, {{t+|el|δαπάνη|f|tr=dapáni}}, {{t+|el|τίμημα|n|tr=tímima}}, {{t+|el|αντίτιμο|n|tr=antítimo}}
 * Hebrew: {{t-|he|עלות|tr='alut|f}}
 * Hungarian: {{t+|hu|ár}}
-{{trans-mid}}
 * Italian: {{t+|it|costo|m}}, {{t+|it|spesa|f}}
+{{trans-mid}}
 * Japanese: {{t+|ja|費用|tr=[[ひよう]], hiyō}}
+* Jèrriais: {{tø|roa-jer|couôtage|m}}, {{tø|roa-jer|couôtement|m}}
 * Kurdish:
 *: Sorani: {{t-|ku|به‌ها}}, {{t-|ku|نرخ}}
 * Latvian: {{t-|lv|maksa|f}}, {{t-|lv|cena|f}}, {{t-|lv|dārdzība|f}}
