t+nv:[[ bą́ą́h ílį́‎]] t-balance ([[WT:EDIT|Assisted]]) <cost#20052186>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -196,9 +196,9 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Greek: [[κοστίζω]] [ko̞ˈstizo̞] (means also "to cause damage or distress"), [[στοιχίζω]] [stiˈçizo̞] (means also "to inflict" and "to align"), [[τιμώμαι]] [tiˈmo̞me̞], [[κάνω]] [ˈkano̞] [colloquial (has a huge number of meanings, one of them is "to cost")]
 * Indonesian: [[habis|menghabiskan]] biaya
 * Interlingua: {{t-|ia|costar}}
-{{trans-mid}}
 * Irish: {{t|ga|cosain}}
 * Italian: {{t+|it|costare}}
+{{trans-mid}}
 * Japanese: {{t-|ja|費やす|tr=[[ついやす]], tsuiyasu}}, {{t-|ja|掛かる|tr=kakaru}}
 * Jèrriais: {{tø|roa-jer|couôter}}
 * Kannada: {{t+|kn|ಬೀರು|tr=bīru|sc=Knda}}
@@ -206,6 +206,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Latin: {{t+|la|consto}}, {{t+|la|valeo}}
 * Latvian: {{t+|lv|maksāt}}
 * Luxembourgish: {{t-|lb|kaschten}}
+* Navajo: {{tø|nv| bą́ą́h ílį́‎}}
 * Norwegian:
 *: Bokmål: {{t|nb|koste}}
 *: Nynorsk: {{t|nn|koste}}
