--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -243,6 +243,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{etyl|gem-pro|en}} {{
 * Irish: {{t-|ga|crann plumaí|m}}
 * Italian: {{t+|it|prugno|m}}, {{t-|it|susino|m}}
 * Japanese: {{t-|ja|セイヨウスモモ|tr=seiyō sumomo}}
+* Jèrriais: {{tø|roa-jer|preunyi|m}}
 * Korean: {{t-|ko|자두나무|tr=jadunamu|sc=Hang}}
 * Latin: {{t-|la|prunus|f|alt=prūnus}}
 {{trans-mid}}
