/* Translations */ fix Burmese translit <bridge#20082502>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -80,7 +80,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|br
 * Bengali: {{t-|bn|পুল|tr=pul|sc=Beng}}
 * Breton: {{t+|br|pont|m}}, pontoù {{p}}
 * Bulgarian: {{t+|bg|мост|m|tr=most}}
-* Burmese: {{t+|my|တံတား|tr=da da:|sc=Mymr}}
+* Burmese: {{t+|my|တံတား|tr=dăda:|sc=Mymr}}
 * Catalan: {{t-|ca|pont|m}}
 * Central Atlas Tamazight: {{tø|tzm|ⵜⵉⵍⴳⴳⵯⵉⵜ|f|tr=tilggʷit|sc=Tfng}}
 * Chamicuro: {{tø|ccc|pwente}}
