--- a/en/惱/惱.15622.wikitext
+++ b/en/惱/惱.15622.wikitext
@@ -3,9 +3,9 @@
 {{ja-forms|[[悩]]|[[恼]]|惱}}
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=9206<sub>3</sub>|canj=心女女田 (PVVW)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=9206<sub>3</sub>|canj=心女女田 (PVVW)|ids=⿰忄⿱巛囟}}
 
-# angered, filled with hate
+# [[anger]]ed, [[filled]] with [[hate]]
 
 ====References====
 * {{Han ref|kx=0392.240|dkj=10856|dj=0728.080|hdz=42332.160|uh=60F1|ud=24817|bh=B46F|bd=46191}}
