t+my:[[အုတ်]] ([[WT:EDIT|Assisted]]) <brick#20102698>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -67,6 +67,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Belarusian: {{t-|be|цэгла|f|tr=céhla|sc=Cyrl}}
 * {{trreq|Breton}}
 * Bulgarian: {{t+|bg|тухла|f|tr=túhla|sc=Cyrl}}
+* Burmese: {{t|my|အုတ်|tr=ok|sc=Mymr}}
 * Catalan: {{t-|ca|maó|m}}
 * Chinese:
 *: Mandarin: {{t|cmn|磚塊|sc=Hani}}, {{t|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t|cmn|磚頭|sc=Hani}}, {{t|cmn|砖头|tr=zhuāntóu|sc=Hani}}
