--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -20,7 +20,9 @@ From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to
 #: ''When pouring a new driveway, you can use a two-by-four as a '''float'''.''
 # An elaborately decorated trailer or vehicle, intended for display in a [[parade]] or [[pageant]].
 #: ''That '''float''' covered in roses is very pretty.''
-# {{British}} A small battery-powered vehicle used for local deliveries, especially in the term [[milk float]].
+# {{British}} A small vehicle used for local deliveries, especially in the term [[milk float]].
+#*'''1913''', [[w:D. H. Lawrence|D.H. Lawrence]], ''[[s:Sons_and_Lovers|Sons and Lovers]]'', [[s:Sons and Lovers/Chapter VII|chapter 7]]
+#*:As soon as the skies brightened and plum-blossom was out, Paul drove off in the milkman's heavy '''float''' up to Willey Farm. 
 # {{finance}} Funds committed to be paid but not yet paid.
 #: ''Our bank does a nightly sweep of accounts, to adjust the '''float''' so we stay within our reserves limit.''
 # {{context|finance|Australia|and other Commonwealth countries?}} An offering of [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to members of the public, normally followed by a listing on a [[stock exchange]].
