t+mi:[[kōmata ]] ([[WT:EDIT|Assisted]]) <zenith#20110476>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -87,6 +87,7 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}}, from {{term|cinit|lang=enm}}, fro
 * German: {{t+|de|Zenit|m}}
 * Japanese: {{t-|ja|天頂|tr=てんちょう, tenchō}}
 * Manx: {{t-|gv|ard-niau}}
+* Maori: {{t|mi|kōmata }}
 * Russian: {{t+|ru|зенит|m|tr=zenít}}
 {{trans-bottom}}
 
