--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -21,8 +21,8 @@ From {{etyl|enm}} {{term|crepen|lang=enm}}, from {{etyl|ang}} {{term|creopan|crÄ
 # {{context|publishing}} In sewn books, the tendency of [[page]]s on the inside of a [[quire]] to stand out farther than those on the outside of it.
 # {{context|materials science}} An increase in [[strain]] with time; the gradual [[flow]] or [[deformation]] of a material under [[stress]].
 # {{geology}} The [[imperceptible]] [[downslope]] movement of surface [[rock]].
-# {{informal|pejorative}} An annoying irritating person
-# {{informal|pejorative}} A frightening and/or disconcerting person, especially one who gives the speaker [[chills]] or who induces [[psychosomatic]] facial itching.
+# {{informal|pejorative}} A person reacted to negatively by others, described as [[annoying]] or [[irritating]].
+# {{informal|pejorative}} A person which others are [[frightened]] of or feel [[disconcerted]] by. Derived from situations where the [[fear]] causes [[chills]] or [[psychosomatic]] facial itching.
 #: ''Stop following me, you '''creep'''!''
 # {{context|agriculture}} A barrier with small openings used to keep large animals out while allowing smaller animals to pass through.
 
