--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -5,9 +5,8 @@
 From {{etyl|enm}} {{term|crepen|lang=enm}}, from {{etyl|ang}} {{term|creopan|crēopan|to creep, crawl|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|kreupanan||to twist, creep|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|ger-||to turn, wind|lang=ine-pro}}. Cognate with {{etyl|frs|-}} {{term|crjippa||to creep|lang=frs}}, {{etyl|nl|-}} {{term|kruipen||to creep, crawl|lang=nl}}, {{etyl|gmh|-}} {{term|kriefen||to creep|lang=gmh}}, Danish {{term|krybe||to creep|lang=da}}, Norwegian {{term|krype||to creep|lang=no}}, {{etyl|sv|-}} {{term|krypa||to creep, crawl|lang=sv}}, {{etyl|is|-}} {{term|krjúpa||to stoop|lang=is}}.
 
 ===Pronunciation===
-* {{enPR|krēp}}, {{IPA|/kriːp/}}, {{X-SAMPA|/kri:p/}}
+* {{enPR|krēp}}, {{IPA|/kɹiːp/}}, {{X-SAMPA|/kr\i:p/}}
 * {{audio|en-us-creep.ogg|Audio (US)}}
-
 * {{rhymes|iːp}}
 
 ===Noun===
