t+arz:[[معدة]] ([[WT:EDIT|Assisted]]) <stomach#20130461>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -43,6 +43,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Albanian: {{t-|sq|stomak}}
 * {{trreq|am}}
 * Arabic: {{t-|ar|معدة|f|tr=máʿida, míʿda}}
+*: Egyptian Arabic: {{tø|arz|معدة|f|tr=meʕda|sc=Arab}}
 * {{trreq|an}}
 * Aramaic:
 *: Syriac: [[ܐܣܛܘܡܟܐ]] (’isṬōmkā’) {{m}}
