--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -42,7 +42,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Afrikaans: {{t-|af|maag}}
 * Albanian: {{t-|sq|stomak}}
 * {{trreq|am}}
-* Arabic: {{t-|ar|معدة|f|tr=máʿida, míʿda}}
+* Arabic: {{t-|ar|معدة|f|tr=máʕida, míʕda}}
 *: Egyptian Arabic: {{tø|arz|معدة|f|tr=meʕda|sc=Arab}}
 * {{trreq|an}}
 * Aramaic:
