--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -48,10 +48,18 @@ From {{etyl|fro|fr}} < {{etyl|la|fr}} {{term|causa|lang=la}}. Compare Italian {{
 ===Alternative forms===
 * {{qualifier|Saint Ouen}} {{l|roa-jer|chôthe}}
 
-===Etymology===
+===Etymology 1===
+From {{etyl|fro|roa-jer}} {{term|chose|lang=fro}}, from {{etyl|la|roa-jer}} {{term|causa|lang=la}}.
+
+====Noun====
+{{roa-jer-noun|f}}
+
+# [[thing]]
+
+===Etymology 2===
 {{rfe|lang=roa-jer}}
 
-===Adjective===
+====Adjective====
 {{roa-jer-adj-mf}}
 
 # [[self-conscious]]
