--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|flaisk-|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|pleh₁ḱ||to tear, peel off|lang=ine-pro}}. Compare [[Old_High_German|Old High German]] "''fleisk''" (German "{{term|Fleisch|lang=de}}").
+From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|flaisk-|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|pleh₁ḱ||to tear, peel off|lang=ine-pro}}. Compare German {{term|Fleisch|lang=de}}, Low German {{term|Fleesch|lang=nds}}, West Frisian {{term|fleis|lang=fy}}, Dutch {{term|vlees|lang=nl}}.
 
 ===Pronunciation===
 * {{audio|en-us-flesh.ogg|Audio (US)}}
