--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -10,7 +10,7 @@
 [[Image:Adriaen_Brouwer,_Bauernrauferei_beim_Kartenspiel_(c._1630–1640).jpg|thumb|Fight ([[brawl]])]]
 
 ===Etymology 1===
-From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||to fight, combat, strive|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|fehtanan||to comb, tease, shear|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|peḱ-||to comb, shear|lang=ine-pro}}. Cognate with {{etyl|sco|-}} {{term|fecht||to fight|lang=sco}}, {{etyl|fy|-}} {{term|fjochtsje|lang=fy}}, {{term|fjuchte||to fight|lang=fy}}, Dutch {{term|vechten||to fight|lang=nl}}, Low German {{term|fechten||to fight|lang=nds}}, German {{term|fechten||to fight, fence|lang=de}}, {{etyl|la|-}} {{term|pecto|pectō|comb, thrash|pos=verb|lang=la}}, {{etyl|sq|-}} {{term|pjek||to hit, strive, fight|lang=sq}}, {{etyl|grc|-}} {{term|πέκω||tr=pékō|comb or card wool|pos=verb|lang=grc}}. Related also to {{etyl|ang|-}} {{term|feht||wool, shaggy pelt, fleece|lang=ang}}.
+From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||to fight, combat, strive|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|fehtaną||to comb, tease, shear|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|peḱ-||to comb, shear|lang=ine-pro}}. Cognate with {{etyl|sco|-}} {{term|fecht||to fight|lang=sco}}, {{etyl|fy|-}} {{term|fjochtsje|lang=fy}}, {{term|fjuchte||to fight|lang=fy}}, Dutch {{term|vechten||to fight|lang=nl}}, Low German {{term|fechten||to fight|lang=nds}}, German {{term|fechten||to fight, fence|lang=de}}, {{etyl|la|-}} {{term|pecto|pectō|comb, thrash|pos=verb|lang=la}}, {{etyl|sq|-}} {{term|pjek||to hit, strive, fight|lang=sq}}, {{etyl|grc|-}} {{term|πέκω||tr=pékō|comb or card wool|pos=verb|lang=grc}}. Related also to {{etyl|ang|-}} {{term|feht||wool, shaggy pelt, fleece|lang=ang}}.
 
 ====Verb====
 {{en-verb|fights|fighting|fought|'''[[fought]]''' ''or'' {{qualifier|archaic}} '''[[foughten]]'''}}
