/* Verb */ # {{intransitive}} To divide into separate parts or subdivisions. <branch#20170556>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -213,6 +213,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 
 # {{intransitive}} To arise from the trunk or a larger branch of a tree.
 # {{intransitive}} To produce branches.
+# {{intransitive}} To divide into separate parts or subdivisions.
 # {{intransitive|computing}} To [[jump]] to a [[different]] [[location]] in a [[program]], especially as the result of a [[conditional]] [[statement]].
 
 ====Translations====
