/* Verb */ fill in rfdef <come#20171406>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -37,7 +37,7 @@ Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{ter
 #: ''He '''came''' to SF literature a confirmed technophile, and nothing made him happier than to read a manuscript thick with imaginary gizmos and whatzits.''
 # {{context|copulative|archaic}} To [[become]], to [[turn out]] to be.
 #: ''He was a dream '''come''' true.''
-# {{intransitive}} {{rfdef|lang=en}}
+# {{intransitive}} To be supplied, or made available; to exist.
 #: ''He's as tough as they '''come'''.''
 #: ''Our milkshakes '''come''' in vanilla, strawberry and chocolate flavours.''
 # {{slang}} To carry through; to succeed in.
