t+ce:[[{{trreq}}]] t+mn:[[{{trreq}}]] t+si:[[{{trreq}}]] t+tyv:[[{{trreq}}]] ([[WT:EDIT|Assisted]]) <fight#20172895>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -54,6 +54,7 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 * Bulgarian: {{t-|bg|боря се|tr=borja se}}
 * Burmese: {{t+|my|ရန်ဖြစ်|tr=yan-hpyit|sc=Mymr}}
 * Catalan: {{t+|ca|lluitar}}, {{t+|ca|barallar-se}}
+* {{trreq|Chechen}}
 * Chinese:
 *: Mandarin: {{t|cmn|鬥爭|sc=Hani}}, {{t|cmn|斗争|tr=dòuzhēng|sc=Hani}}, {{t|cmn|戰鬥|sc=Hani}}, {{t|cmn|战斗|tr=zhàndòu|sc=Hani}}, {{t|cmn|奮鬥|sc=Hani}}, {{t|cmn|奋斗|tr=fèndòu|sc=Hani}}
 * Czech: {{t+|cs|bojovat}}, {{t-|cs|zápasit}}
@@ -86,6 +87,7 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 * Latvian: {{t+|lv|cīnīties}}, {{t-|lv|kauties}}
 * Lithuanian: {{t-|lt|kautis}}, {{t+|lt|muštis}}, {{t-|lt|peštis}}, {{t-|lt|grumtis}}
 * Maltese: {{t-|mt|ġlieda}}
+* {{trreq|Mongolian}}
 * Norwegian: {{t+|no|slåss}}, {{t-|no|kjempe}}
 * Old English: {{t-|ang|feohtan}}
 * {{trreq|Oriya}}
@@ -100,6 +102,7 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|борити|alt=борити се}}
 *: Roman: {{t-|sh|boriti|alt=boriti se}}
+* {{trreq|Sinhalese}}
 * Slovak: {{t-|sk|bojovať}}
 * Slovene: {{t-|sl|boriti|alt=boriti se}}
 * Spanish: {{t+|es|pelear}}, {{t+|es|luchar}}
@@ -109,6 +112,7 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 * {{trreq|Tibetan}}
 * Tok Pisin: {{t-|tpi|paitim}}
 * Turkish: {{t+|tr|savaşmak}}
+* {{trreq|Tuvan}}
 * Ukrainian: {{t+|uk|битися|tr=býtysja|sc=Cyrl}}, {{t+|uk|боротися|tr=borótysja|sc=Cyrl}}
 * {{trreq|Urdu}}
 * Vietnamese: {{t+|vi|chiến đấu}}
