t+mg:[[oliva volo]] t+mg:[[oliva]] ([[WT:EDIT|Assisted]]) <olive#20234194>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -128,6 +128,7 @@
 * Kurdish: {{t-|ku|darzeytûn|f}}, {{t+|ku|zeytûn|f}}
 * Macedonian: {{t-|mk|маслиновина|f|tr=maslinóvina}}
 {{trans-mid}}
+* Malagasy: {{t|mg|oliva}}
 * Maltese: {{t-|mt|żebbuġ}}
 * Russian: {{t+|ru|олива|f|tr=olíva}}
 * Serbo-Croatian:
@@ -147,6 +148,7 @@
 * Japanese: {{t-|ja|オリーブ色|tr=orību-iro}}
 * Korean: {{t-|ko|올리브색}}
 * Kurdish: {{t-|ku|zeytûnî}}, {{t-|ku|rengzeytûnî}}
+* Malagasy: {{t|mg|oliva volo}}
 * Persian: {{fa-Arab|[[رنگ]] [[زیتونی]]}} (rang zaitūni), {{t+|fa|زیتونی|tr=zeytōni}}
 * Polish: {{t+|pl|oliwkowy|f}}
 {{trans-mid}}
