--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -190,8 +190,7 @@ From {{etyl|enm}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang}} {{t
 ==Swedish==
 
 ===Pronunciation===
-* {{IPA|/sɵk/|lang=sv}}
-* {{X-SAMPA|/s8k/|lang=sv}}
+* {{IPA|/sɵk/|lang=sv}}, {{X-SAMPA|/s8k/|lang=sv}}
 
 ===Noun===
 {{sv-noun|g=c}}
