/* Adjective */ # {{obsolete|rare}} [[strait]]; [[narrow]]  #* Sir J. Mandeville  #*: Egypt is a long country, but it is '''straight''', that is to say, narrow. <straight#20323918>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -77,12 +77,15 @@
 #*: Some of my friends - gay and '''straight''' - seem unable to understand the close but platonic nature of my and Gian's relationship, but have been supportive.
 #* '''2011''', Jodi Picoult, ''Sing You Home'', p. 273:
 #*: Angela smiles. ‘I'm '''straight''', Zoe, and I'm happily married.’
-# {{colloquial|slang|pejorative}} {{non-gloss definition|Used to express dislike}}: [[boredom|Boring]], unimaginative, [[inferior]]. {{defdate|from 20th c.}}
-##: ''My boyfriend is '''straight'''.'' = He is plain boring.
-#* Wavy Gravy.
-#*: ‘Sure, I could of done it different... put my clown in a closet and dressed up in '''straight''' clothing. I could of compromised my essence, and swallowed my soul.’
+# {{colloquial|slang|pejorative}} [[boring|Boring]], [[unimaginative]], [[mainstream]]. {{defdate|from 20th c.}}
+#: ''My boyfriend is '''straight'''.'' = He is plain boring.
+#* {{w|Wavy Gravy}}
+#*: ‘Sure, I could have done it different... put my clown in a closet and dressed up in '''straight''' clothing. I could have compromised my essence, and swallowed my soul.’
 #* '''1989''', Gus Van Sant, ''Drugstore Cowboy''.
 #*: ‘For all the boredom the '''straight''' life brings, it's not too bad.’
+# {{obsolete|rare}} [[strait]]; [[narrow]]
+#* Sir J. Mandeville
+#*: Egypt is a long country, but it is '''straight''', that is to say, narrow.
 
 ====Antonyms====
 * [[curved]]
