t+ab:[[{{trreq}}]] t+av:[[{{trreq}}]] t+ce:[[{{trreq}}]] t+hu:[[{{trreq}}]] t+th:[[{{trreq}}]] t+tyv:[[{{trreq}}]] t+os:[[{{trreq}}]] t+km:[[{{trreq}}]] ([[WT:EDIT|Assisted]]) <find#20327874>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -47,14 +47,17 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|fi
 
 ====Translations====
 {{trans-top|encounter, locate, discover}}
+* {{trreq|Abkhaz}}
 * Ainu: {{tø|ain|パ|tr=pa}}
 * Arabic: {{t+|ar|وجد|tr=wájada}}
 * Armenian: {{t-|hy|գտնել|tr=gtnel}}
+* {{trreq|Avar}}
 * Azeri: {{t-|az|bulmaq}}
 * Basque: {{t-|eu|aurkitu}}, {{t-|eu|topatu}}
 * Breton: {{t+|br|kavout}}
 * Bulgarian: {{t+|bg|намирам|sc=Cyrl}}, {{t+|bg|откривам|sc=Cyrl}}
 * Catalan: {{t+|ca|trobar}}
+* {{trreq|Chechen}}
 * Chinese:
 *: Mandarin: {{t|cmn|找到|tr=zhǎodào|sc=Hani}}
 * Crimean Tatar: [[tapmaq]]
@@ -74,6 +77,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|fi
 * Greek: {{t+|el|βρίσκω|tr=vrísko}}
 * Hebrew: {{t-|he|מצא|tr=matzá}}
 * Hindi: {{t-|hi|पाना|tr=pānā|sc=Deva}}
+* {{trreq|Hungarian}}
 * Icelandic: {{t+|is|finna}}
 * Interlingua: {{t-|ia|trovar}}
 {{trans-mid}}
@@ -81,6 +85,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|fi
 * Italian: {{t+|it|trovare}}
 * Japanese: {{t-|ja|見つける|tr=みつける, mitsukeru|sc=Jpan}} ({{t-|ja|見附る|sc=Jpan}})
 * Jèrriais: {{tø|roa-jer|trouver}}
+* {{trreq|Khmer}}
 * Kurdish:
 *: Sorani: {{ku-Arab|[[دیتنه‌وه‌]]}}, {{ku-Arab|[[دۆزینه‌وه‌]]}}
 * Latgalian: {{tø|ltg|atrast}}, {{tø|ltg|rast}}
@@ -91,6 +96,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|fi
 * Mizo: {{tø|lus|hmu}}, {{tø|lus|hmuchhuak}}
 * Mongolian: {{t+|mn|олох|sc=Cyrl}}
 * Norwegian: {{t+|no|finne}}
+* {{trreq|Ossetian}}
 * Persian: {{t+|fa|یافتن|tr=yâftan}}, {{t+|fa|پیدا کردن|tr=peydâ kardan|sc=fa-Arab}}
 * Polish: {{t+|pl|znajdować}}
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
@@ -104,7 +110,9 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|fi
 * Slovene: {{t+|sl|najti}}
 * Spanish: {{t+|es|encontrar}}, {{t+|es|hallar}}
 * Swedish: {{t+|sv|finna}}, {{t+|sv|hitta}}, {{t+|sv|uppdaga}}, {{t+|sv|upptäcka}}, {{t+|sv|utröna}}
+* {{trreq|Thai}}
 * Turkish: {{t+|tr|bulmak}}
+* {{trreq|Tuvan}}
 * Vietnamese: {{t+|vi|tìm}}
 * Volapük: {{t+|vo|tuvön}}
 {{trans-bottom}}
