t+tyv:[[тывар]] ([[WT:EDIT|Assisted]]) <find#20327903>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -112,7 +112,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|fi
 * Swedish: {{t+|sv|finna}}, {{t+|sv|hitta}}, {{t+|sv|uppdaga}}, {{t+|sv|upptäcka}}, {{t+|sv|utröna}}
 * {{trreq|Thai}}
 * Turkish: {{t+|tr|bulmak}}
-* {{trreq|Tuvan}}
+* Tuvan: {{tø|tyv|тывар|tr=tyvar}}
 * Vietnamese: {{t+|vi|tìm}}
 * Volapük: {{t+|vo|tuvön}}
 {{trans-bottom}}
