--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -317,6 +317,9 @@
 #* ['''1923''', J[oseph] Manchon, ''Le slang : lexique de l'anglais familier et vulgaire : précédé d'une étude sur la pronunciation et la grammaire populaires'', p. 296:
 #*: A straight = a straighter = a straight cut, une cigarette en tabac de Virginie.]
 
+====Synonyms====
+* {{sense|heterosexual}} [[hetero]]
+
 ====Translations====
 {{trans-top|part of a racecourse or running track that is not curved}}
 * Czech: {{t-|cs|rovinka|f}}
