/* Cantonese */ added "jyut=" (jyutping) data (co5, zo6) data to /yue-hanzi/ template <坐#20333855>

--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -21,7 +21,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=cho5, jo6}}
+{{yue-hanzi|jyut=[[co5]], [[zo6]]|y=cho5, jo6}}
 
 # {{defn|lang=yue|sort=土04}}
 
