t+tt:[[сөйләргә]] t-balance t+tt:[[әйтергә]] ([[WT:EDIT|Assisted]]) <speak#20335103>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -130,8 +130,8 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Lithuanian: {{t+|lt|kalbėti}}
 * Lojban: {{t+|jbo|tavla}}
 * Luxembourgish: {{t-|lb|schwätzen}}
-{{trans-mid}}
 * Macedonian: {{t-|mk|зборува|tr=zbóruva}}
+{{trans-mid}}
 * Malay: {{t|ms|bercakap}}
 * Maltese: {{t-|mt|tkellem}}
 * Marathi: {{t-|mr|बोलणे|sc=Deva}}
@@ -169,6 +169,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Swedish: {{t+|sv|tala}}, {{t+|sv|prata}}, {{t+|sv|snacka}}
 * Tagalog: {{t|tl|magsalita}}
 * Tajik: {{t-|tg|ҳарф задан|tr=harf zadan|sc=Cyrl}}
+* Tatar: {{t|tt|сөйләргә|tr=söylärgä|sc=Cyrl}}, {{t|tt|әйтергә|tr=äytergä|sc=Cyrl}}
 * Thai: {{t+|th|พูด|tr=pôot}}
 * Tupinambá: [[nhe'eng]]
 * Turkish: {{t+|tr|konuşmak}}
