--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -1,5 +1,5 @@
-{{wikipedia|dab=secretary (disambiguation)|secretary}}
 ==English==
+{{wikipedia|dab=secretary (disambiguation)|secretary}}
 
 ===Etymology===
 From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}}, from {{etyl|la}} {{term|lang=la|secretus||private, secret}}, past participle of {{term|lang=la|secernere||to separate, set apart}}, from {{term|lang=la|se-||apart}} + {{term|lang=la|cernere||to separate}}.
@@ -17,9 +17,9 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}}, from
 # A person who keeps [[records]], takes [[notes]] and handles general [[clerical]] work.
 # {{often|capitalized}} The [[head]] of a [[department]] of [[government]].
 # A managerial or leading position in certain non-profit organizations, such as political parties, trade unions, international organizations.
-#: ''Ban Ki-Moon is the current secretary general of the United Nations.''
+#: ''Ban Ki-Moon is the current '''secretary''' general of the United Nations.''
 # {{US}} A type of [[desk]]; a [[secretaire]].
-# A species of [[bird]]; ''Sagittarius serpentarius''.
+# A species of [[bird]]; ''[[Sagittarius serpentarius]]''.
 
 ====Derived terms====
 * [[secretary bird]]
