t+tyv:[[өртек]] t-balance ([[WT:EDIT|Assisted]]) <cost#20341686>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -101,8 +101,8 @@ From {{etyl|enm}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{term|c
 * Hebrew: {{t-|he|עלות|tr='alut|f}}
 * Hungarian: {{t+|hu|ár}}
 * Italian: {{t+|it|costo|m}}, {{t+|it|spesa|f}}
-{{trans-mid}}
 * Japanese: {{t+|ja|費用|tr=[[ひよう]], hiyō}}
+{{trans-mid}}
 * Jèrriais: {{tø|roa-jer|couôtage|m}}, {{tø|roa-jer|couôtement|m}}
 * Kurdish:
 *: Sorani: {{t-|ku|به‌ها}}, {{t-|ku|نرخ}}
@@ -120,6 +120,7 @@ From {{etyl|enm}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{term|c
 * Swahili: {{t+|sw|gharama}}
 * Swedish: {{t+|sv|kostnad|c}}
 * {{trreq|Turkish}}
+* Tuvan: {{tø|tyv|өртек|tr=örtek}}
 {{trans-bottom}}
 
 {{trans-top|negative consequence or loss}}
