add lang to homophones <plum#20343497>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -5,7 +5,7 @@
 * {{enPR|plŭm}}, {{IPA|/plʌm/}}, {{X-SAMPA|/plVm/}}
 * {{audio|en-us-plum.ogg|Audio (US)}}
 * {{rhymes|ʌm}}
-* {{homophones|plumb}}
+* {{homophones|lang=en|plumb}}
 
 ===Etymology 1===
 From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|prūmōn|lang=gem-pro}}. Cognate with German {{term|Pflaume|lang=de}}, Dutch {{term|pruim|lang=nl}}. Compare {{term|prune|lang=en}}
