add lang to homophones <find#20343563>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -8,7 +8,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|fi
 * {{audio|en-us-find.ogg|Audio (US)}}
 * {{audio|En-uk-to find.ogg|Audio (UK)}}
 * {{rhymes|aɪnd}}
-* {{homophones|fined}}
+* {{homophones|lang=en|fined}}
 
 ===Verb===
 [[File:Nymphs finding the Head of Orpheus.jpg|thumb|upright|"Nymphs Finding the Head of Orpheus", a painting by [[w:John William Waterhouse|John William Waterhouse]]]]
