--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -77,7 +77,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Rapa Nui: {{tø|rap|rua}}
 * Romanian: {{t-|ro|vomita}}, {{t+|ro|borî}}, {{t-|ro|vărsa}}
 * Romansch: {{t-|rm|vomitar}}
-* Russian: {{t+|ru|блевать|tr=blevátʹ|sc=Cyrl}} {{impf}}, {{t+|ru|рвать|tr=rvatʹ|sc=Cyrl}} {{impf}} {{qualifier|impersonal}}, {{t|ru|тошнить|tr=tošnítʹ|sc=Cyrl}} {{impf}} {{qualifier|impersonal, to feel sick}}, {{t|ru|рыгать|tr=rygátʹ|sc=Cyrl}}
+* Russian: {{t+|ru|блевать|tr=blevátʹ|sc=Cyrl}} {{impf}}, {{t+|ru|рвать|tr=rvatʹ|sc=Cyrl}} {{impf}} {{qualifier|impersonal}}, {{t|ru|тошнить|tr=tošnítʹ|sc=Cyrl}} {{impf}} {{qualifier|impersonal, to feel sick}}, {{t|ru|рыгать|tr=rygátʹ|sc=Cyrl}} {{impf}}
 * {{ttbc|Serbo-Croatian}}:
 *: Cyrillic: {{t-|sh|ригати|sc=Cyrl}}, {{t-|sh|збљувати|sc=Cyrl}}, {{t-|sh|повратити|sc=Cyrl}}, {{t-|sh|бљувати|sc=Cyrl}}, , {{t-|sh|повраћати|sc=Cyrl}}
 *: Roman: {{t-|sh|rigati}}, {{t-|sh|zbljuvati}}, {{t-|sh|povratiti}}, {{t-|sh|bljuvati}}, {{t-|sh|povraćati}}
