--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Etymology===
-{{Han compound|日|一|勿|t1=sun|ls=ic}}
+{{Han compound|日|一|勿|t1=sun|ls=ic}} The rays of the sun.
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6022<sub>7</sub>|canj=日一尸竹 (AMSH)}}
